# pdf-combiner

./: .gitignore  README.md  input.py  pdf_combiner.py  pyproject.toml  requirements.txt  util.py
.github/workflows/: format.yml  generate_installer.yml  python_unit_tests.yml
pdf_combiner/: __main__.py  input.py  pdf_combiner.py
pdf_util/: __main__.py  input.py  pdf_util.py
pdf_utility/: __main__.py  image_to_pdf.py  input.py  pdf_utility.py
scripts/: format.py  generate_installer.py  test_python_source.py
tests/: test_conversion_cleanup.py  test_image_to_pdf.py  test_inputs.py
