[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf_util"
version = "0.0.3"
authors = [
  { name="Sahil Kale" },
]
description = "PDF Manipulation Utilities"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "pikepdf",
    "pillow",
    "click",
]
license = { text = "Prosperity 3.0.0" }

[project.urls]
Homepage = "https://github.com/sahil-kale/pdf-util"
Issues = "https://github.com/sahil-kale/pdf-util/issues"

[project.scripts]
pdf_util = "pdf_util.pdf_util:main"

[tool.setuptools.packages.find]
where = ["."]